--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,37 @@ body {
   font-family: 'Lato', sans-serif;
   background-color: #f5f5f5;
 }
+
+a {
+  color: #0089da;
+  transition: color .2s ease-in-out;
+
+  &:hover {
+    color: #3bb6ff;
+  }
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  
+  td, th {
+    padding: 10px 15px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+
+    &:first-child {
+      padding-left: 0;
+    }
+
+    &:last-child {
+      padding-right: 0;
+    }
+  }
+
+  tr:last-child {
+    th, td {
+      border-bottom: 0;
+    }
+  }
+}
