Redirect user to not found when no user found

--- a/src/app/shared/components/content-header/contentHeader.component.scss
+++ b/src/app/shared/components/content-header/contentHeader.component.scss
@@ -1,7 +1,6 @@
 :host {
   display: block;
   width: 1000px;
+  min-height: 1px;
   margin: 0 auto;
-  border: 1px solid #ddd;
-  background-color: #ffffff;
 }
