--- a/src/app/users/users-list/usersList.component.scss
+++ b/src/app/users/users-list/usersList.component.scss
@@ -1,3 +1,13 @@
+content-header-component {
+  height: 40px;
+  margin-top: 60px;
+}
+
+content-component {
+  margin-top: 15px;
+  margin-bottom: 80px;
+}
+
 data-table-row {
   cursor: pointer;
 }
