--- a/src/app/users/single-user/singleUser.component.scss
+++ b/src/app/users/single-user/singleUser.component.scss
@@ -1,6 +1,21 @@
 @import '../../../assets/scss/mixins.scss';
 
+content-header-component {
+  height: 40px;
+  margin-top: 60px;
+
+  a {
+    display: inline-block;
+    margin-left: -10px;
+    padding: 0 10px;
+    font-size: 18px;
+    line-height: 40px;
+  }
+}
+
 content-component {
+  margin-top: 15px;
+  margin-bottom: 80px;
   padding: 30px;
 }
 
@@ -117,24 +132,5 @@ header {
 .address {
   .map {
     height: 400px;
-  }
-}
-
-.not-found {
-  text-align: center;
-
-  svg {
-    width: 150px; 
-    height: 150px;
-  }
-
-  h2 {
-    margin: 20px 0 0;
-    font-size: 40px;
-  }
-
-  a {
-    display: inline-block;
-    margin-top: 10px;
   }
 }
