--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<sidebar-component></sidebar-component>
+<ud-sidebar-component></ud-sidebar-component>
 
 <main role="main">
   <ng-content></ng-content>
