--- a/src/app/users/single-user/singleUser.component.scss
+++ b/src/app/users/single-user/singleUser.component.scss
@@ -1,6 +1,6 @@
 @import '../../../assets/scss/mixins.scss';
 
-content-header-component {
+ud-content-header-component {
   height: 40px;
   margin-top: 60px;
 
@@ -13,7 +13,7 @@ content-header-component {
   }
 }
 
-content-component {
+ud-content-component {
   margin-top: 15px;
   margin-bottom: 80px;
   padding: 30px;
@@ -26,7 +26,7 @@ header {
 
   @include clearfix();
 
-  user-avatar {
+  ud-user-avatar {
     float: left;
   }
 
