--- a/src/app/users/user-not-found/userNotFound.component.html
+++ b/src/app/users/user-not-found/userNotFound.component.html
@@ -1,13 +1,13 @@
-<content-header-component>
+<ud-content-header-component>
     <a class="icon-link" [routerLink]="['/users', 'list']">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 341.333 341.333">
         <path d="M341.333 149.333H81.707L200.853 30.187 170.667 0 0 170.667l170.667 170.666 30.186-30.186L81.707 192h259.626z"/>
       </svg>
       <span>Go back</span>
     </a>
-  </content-header-component>
+  </ud-content-header-component>
 
-<content-component>
+<ud-content-component>
   <div class="not-found">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 426.667 426.667">
       <path d="M124.16 213.333l22.613-22.613 22.614 22.613L192 190.72l-22.613-22.613L192 145.493l-22.613-22.72-22.614 22.72-22.613-22.72-22.72 22.72 22.72 22.614-22.72 22.613zM213.333 256c-49.707 0-91.947 31.147-109.013 74.667h218.027C305.28 287.147 263.04 256 213.333 256zM302.507 122.773l-22.614 22.72-22.613-22.72-22.613 22.72 22.613 22.614-22.613 22.613 22.613 22.613 22.613-22.613 22.614 22.613 22.72-22.613-22.72-22.613 22.72-22.614z"/>
@@ -15,4 +15,4 @@
     </svg>
     <h2>User Not Found</h2>
   </div>
-</content-component>
+</ud-content-component>
