--- a/src/app/users/user-not-found/userNotFound.component.scss
+++ b/src/app/users/user-not-found/userNotFound.component.scss
@@ -1,4 +1,4 @@
-content-header-component {
+ud-content-header-component {
   height: 40px;
   margin-top: 60px;
 
@@ -11,7 +11,7 @@ content-header-component {
   }
 }
 
-content-component {
+ud-content-component {
   margin-top: 15px;
   margin-bottom: 80px;
   padding: 60px 30px;
