--- a/src/app/shared/components/user-avatar/userAvatar.component.html
+++ b/src/app/shared/components/user-avatar/userAvatar.component.html
@@ -1,4 +1,4 @@
 <div class="avatar-container">
   <img [src]="avatarUrl" alt="user avatar" />
 </div>
-<div class="status" [ngClass]="{ 'active': isActive, 'inactive': !isActive }"></div>
+<div class="status" [class.active]="isActive"></div>
