Moved users list to the left bar

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,6 @@
-<ud-sidebar-component></ud-sidebar-component>
+<ud-sidebar-component>
+  <ng-content select="aside"></ng-content>
+</ud-sidebar-component>
 
 <main role="main">
   <ng-content></ng-content>
