--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -3,20 +3,4 @@
   <span>User directory</span>
 </div>
 
-<div class="menu">
-  <ul class="placeholder-list">
-    <li class="long"></li>
-    <li class="short"></li>
-    <li class="long"></li>
-    <li class="short"></li>
-  </ul>
-
-  <div class="divider"></div>
-
-  <ul class="placeholder-list">
-    <li class="long"></li>
-    <li class="short"></li>
-    <li class="long"></li>
-    <li class="short"></li>
-  </ul>
-</div>
+<ng-content></ng-content>
