--- a/src/app/users/users-list/usersList.component.html
+++ b/src/app/users/users-list/usersList.component.html
@@ -1,45 +1,24 @@
-<ud-content-header-component>
-  <form class="list-controls" [formGroup]="listControls">
-    <div class="sort-by">
-      <select formControlName="sortBy">
-        <option value="status">Status</option>
-        <option value="name">Name</option>
-        <option value="email">Email</option>
-        <option value="company">Company</option>
-      </select>
+<form class="list-controls" [formGroup]="listControls">
+  <div class="search">
+    <label for="search">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 446.25 446.25">
+        <path d="M318.75 280.5h-20.4l-7.649-7.65c25.5-28.05 40.8-66.3 40.8-107.1C331.5 73.95 257.55 0 165.75 0S0 73.95 0 165.75 73.95 331.5 165.75 331.5c40.8 0 79.05-15.3 107.1-40.8l7.65 7.649v20.4L408 446.25 446.25 408l-127.5-127.5zm-153 0C102 280.5 51 229.5 51 165.75S102 51 165.75 51 280.5 102 280.5 165.75s-51 114.75-114.75 114.75z"/>
+      </svg>
+    </label>
+    <input id="search" type="text" placeholder="Search..." formControlName="search" />
+  </div>
+</form>
+
+<ul class="users-list">
+  <li *ngFor="let user of usersStore.users$ | async | searchUsers: searchValue | sortUsers: 'status'" 
+      [routerLink]="['/users', user.email]"
+      routerLinkActive="active">
+    <div class="user-general">
+      <ud-user-avatar [avatarUrl]="user.picture" [isActive]="user.isActive"></ud-user-avatar>
+      <div class="user-meta">
+        <h3>{{ user.name.first + ' ' + user.name.last }}</h3>
+        <h4>{{ user.email }}</h4>
+      </div>
     </div>
-
-    <div class="search">
-      <label for="search">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 446.25 446.25">
-          <path d="M318.75 280.5h-20.4l-7.649-7.65c25.5-28.05 40.8-66.3 40.8-107.1C331.5 73.95 257.55 0 165.75 0S0 73.95 0 165.75 73.95 331.5 165.75 331.5c40.8 0 79.05-15.3 107.1-40.8l7.65 7.649v20.4L408 446.25 446.25 408l-127.5-127.5zm-153 0C102 280.5 51 229.5 51 165.75S102 51 165.75 51 280.5 102 280.5 165.75s-51 114.75-114.75 114.75z"/>
-        </svg>
-      </label>
-      <input id="search" type="text" placeholder="Search..." formControlName="search" />
-    </div>
-  </form>
-</ud-content-header-component>
-
-<ud-content-component>
-  <ud-data-table>
-    <ud-data-table-header>
-      <ud-data-table-header-cell>General</ud-data-table-header-cell>
-      <ud-data-table-header-cell>Company</ud-data-table-header-cell>
-      <ud-data-table-header-cell>Registered</ud-data-table-header-cell>
-      <ud-data-table-header-cell>Balance</ud-data-table-header-cell>
-    </ud-data-table-header>
-
-    <ud-data-table-row *ngFor="let user of usersStore.users$ | async | searchUsers: searchValue | sortUsers: sortByValue" [routerLink]="['../', user.email]">
-      <ud-data-table-cell class="user-general">
-        <ud-user-avatar [avatarUrl]="user.picture" [isActive]="user.isActive"></ud-user-avatar>
-        <div class="user-meta">
-          <h3>{{ user.name.first + ' ' + user.name.last }}</h3>
-          <h4>{{ user.email }}</h4>
-        </div>
-      </ud-data-table-cell>
-      <ud-data-table-cell class="user-company">{{ user.company }}</ud-data-table-cell>
-      <ud-data-table-cell class="user-registered">{{ user.registered }}</ud-data-table-cell>
-      <ud-data-table-cell class="user-balance">{{ user.balance }}</ud-data-table-cell>
-    </ud-data-table-row>
-  </ud-data-table>
-</ud-content-component>
+  </li>
+</ul>
