--- a/src/app/users/users-list/usersList.component.scss
+++ b/src/app/users/users-list/usersList.component.scss
@@ -1,42 +1,31 @@
 @import '../../../assets/scss/mixins.scss';
 
-ud-content-header-component {
-  height: 40px;
-  margin-top: 60px;
-}
-
-ud-content-component {
-  margin-top: 15px;
-  margin-bottom: 80px;
-}
-
 .list-controls {
-  @include clearfix();
+  border-top: 1px solid #000000;
+  border-bottom: 1px solid #191919;
+  background-color: #3f3c44;
 
-  .sort-by {
-    float: left;
-    line-height: 40px;
-  }
+  @include clearfix();
 
   .search {
     position: relative;
-    float: right;
-    height: 40px;
-    width: 250px;
-    border: 1px solid #ddd;
-    background-color: #fff;
+    height: 50px;
+    width: 100%;
+    border: none;
+    background-color: transparent;
 
     label {
       position: absolute;
       left: 0;
       top: 0;
-      width: 40px;
-      height: 40px;
-      padding: 10px;
+      width: 50px;
+      height: 50px;
+      padding: 15px;
 
       svg {
         width: 20px;
         height: 20px;
+        fill: #efefef;
       }
     }
 
@@ -44,23 +33,71 @@ ud-content-component {
       position: absolute;
       right: 0;
       top: 0;
-      width: calc(100% - 40px);
-      height: 38px;
+      width: calc(100% - 50px);
+      height: 50px;
       margin: 0;
-      padding: 0 5px 0 0;
-      line-height: 38px;
+      padding: 0 15px 0 0;
+      line-height: 50px;
+      color: #efefef;
       border: none;
+      background-color: transparent;
       box-shadow: none;
       outline: none;
     }
   }
 }
 
-ud-data-table-row {
-  cursor: pointer;
-}
+.users-list {
+  margin: 0;
+  padding: 0;
 
-.user-general {
+  li {
+    position: relative;
+    list-style: none;
+    outline: none;
+    transition: background-color .2s ease-in-out;
+    cursor: pointer;
+
+    &::after {
+      content: ' ';
+      position: absolute;
+      bottom: 0;
+      left: 15px;
+      right: 15px;
+      height: 1px;
+      background-color: rgba(255, 255, 255, 0.1);
+      transition: background-color .2s ease-in-out;
+    }
+
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.1);
+
+      &::after {
+        background-color: transparent;
+      }
+    }
+
+    &.active {
+      background-color: #007fa5;
+
+      &::after {
+        background-color: transparent;
+      }
+    }
+
+    &:last-child {
+      &::after {
+        display: none;
+      }
+    }
+  }
+
+  .user-general {
+    padding: 20px 15px 21px;
+
+    @include clearfix();
+  }
+
   ud-user-avatar {
     float: left;
     margin-top: 4px;
@@ -73,13 +110,14 @@ ud-data-table-row {
     h3 {
       margin: 0 0 3px;
       font-size: 16px;
+      color: rgba(255, 255, 255, 0.9);
     }
 
     h4 {
       margin: 0;
       font-size: 13px;
       font-weight: 400;
-      color: #828282;
+      color: rgba(255, 255, 255, 0.6);
     }
   }
 }
