--- a/src/app/users/users-list/usersList.component.scss
+++ b/src/app/users/users-list/usersList.component.scss
@@ -48,8 +48,10 @@
 }
 
 .users-list {
+  height: calc(100% - 50px);
   margin: 0;
   padding: 0;
+  overflow-y: scroll;
 
   li {
     position: relative;
