--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<ud-sidebar-component>
+<ud-sidebar-component [sidebarOpen]="sidebarOpen">
   <ng-content select="aside"></ng-content>
 </ud-sidebar-component>
 
