--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -18,4 +18,9 @@ main {
   width: calc(100% - 350px);
   overflow-y: scroll;
   overflow-x: hidden;
+
+  @media (max-width: 768px) {
+    float: none;
+    width: 100%;
+  }
 }
