--- a/src/app/users/single-user/singleUser.component.scss
+++ b/src/app/users/single-user/singleUser.component.scss
@@ -7,20 +7,18 @@ ud-content-component {
 }
 
 header {
+  position: relative;
   margin-bottom: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid #ddd;
 
-  @include clearfix();
-
   ud-user-avatar {
-    float: left;
+    position: absolute;
   }
 
   h3 {
-    float: left;
     margin: 0;
-    margin-left: 15px;
+    margin-left: 45px;
     font-size: 25px;
 
     span {
@@ -43,6 +41,20 @@ header {
 
     &:last-of-type {
       padding-left: 15px;
+    }
+
+    @media (max-width: 1200px) {
+      float: none;
+      width: 100%;
+
+      &:first-of-type {
+        padding-right: 0;
+      }
+      
+      &:last-of-type {
+        margin-top: 30px;
+        padding-left: 0;
+      }
     }
   }
 }
