--- a/src/app/shared/components/content/content.component.scss
+++ b/src/app/shared/components/content/content.component.scss
@@ -5,4 +5,8 @@
   margin: 0 auto;
   border: 1px solid #ddd;
   background-color: #ffffff;
+
+  @media (max-width: 768px) {
+    width: calc(100% - 30px);
+  }
 }
