--- a/src/app/users/user-not-found/userNotFound.component.scss
+++ b/src/app/users/user-not-found/userNotFound.component.scss
@@ -2,6 +2,11 @@ ud-content-component {
   margin-top: 50px;
   margin-bottom: 80px;
   padding: 60px 30px;
+
+  @media (max-width: 768px) {
+    margin-top: 60px;
+    padding: 40px 15px;
+  }
 }
 
 .not-found {
