--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -3,6 +3,12 @@
     <ud-users-list (userSelected)="onUserSelected($event)"></ud-users-list>
   </aside>
 
+  <button class="sidebar-toggler" (click)="onOpenSidebar($event)">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 384">
+      <path d="M0 277.333h384V320H0zM0 170.667h384v42.667H0zM0 64h384v42.667H0z"/>
+    </svg>
+  </button> 
+
   <router-outlet></router-outlet>
 </ud-main-component>
   
