--- a/src/app/users/single-user/singleUser.component.scss
+++ b/src/app/users/single-user/singleUser.component.scss
@@ -4,6 +4,11 @@ ud-content-component {
   margin-top: 50px;
   margin-bottom: 80px;
   padding: 30px;
+
+  @media (max-width: 768px) {
+    margin-top: 60px;
+    padding: 15px;
+  }
 }
 
 header {
