--- a/src/app/users/users.component.scss
+++ b/src/app/users/users.component.scss
@@ -1,3 +1,17 @@
 aside {
   height: calc(100vh - 120px);
 }
+
+.sidebar-toggler {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 60px;
+  height: 60px;
+  padding: 15px;
+
+  @media (max-width: 768px) {
+    display: block;
+  }
+}
