--- a/src/app/users/users.component.scss
+++ b/src/app/users/users.component.scss
@@ -10,6 +10,11 @@ aside {
   width: 60px;
   height: 60px;
   padding: 15px;
+  border: none;
+  background-color: #f5f5f5;
+  -webkit-appearance: none;
+  box-shadow: none;
+  z-index: 90;
 
   @media (max-width: 768px) {
     display: block;
